fixed small bugs
weeklyrides.html bug (statuses).
when deleting a ridepat - change status of return ridepat.
date of reoccurring return ridepats with drivers.

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1009,10 +1009,10 @@
 
                     if (returnRidePat) {
                         if (returnRidePat.Coordinator.DisplayName != GENERAL.USER.getUserDisplayName() || hospitals.includes(returnRidePat.Destination.Name)) {
-                            //closeModal()
-                            $('#messagesModal').modal('hide');
-                            $('#DriverReturnRidePatMsg').html("");
-                            setTimeout(function () { refreshTable() }, 1001);
+                            closeModal()
+                            //$('#messagesModal').modal('hide');
+                            //$('#DriverReturnRidePatMsg').html("");
+                            //setTimeout(function () { refreshTable() }, 1001);
                         } else {
                             $("#returnRidePatMsg").text(returnRidePatMsg);
                             $("#messagesModal").modal();
