--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -2848,7 +2848,7 @@
         checkAfternoon();
 
         dateForReturnRepeat = localStorage.getItem("dateForReturnRepeat");
-        alert(dateForReturnRepeat);
+        //alert(dateForReturnRepeat);
         localStorage.removeItem("dateForReturnRepeat");
         $("#dateRide").val(dateForReturnRepeat)
 
