fixed vda - removed some fields that are no longer in the volunteer data

--- a/Road to Recovery/pages/vda.html
+++ b/Road to Recovery/pages/vda.html
@@ -116,10 +116,10 @@
                                         <th>איך יכול.ה לסייע</th>
                                         <th>עדכון שבועי</th>
                                         <th class="right">שם באנגלית</th>
-                                        <th class="left">Source</th>
+                                        <!--<th class="left">Source</th>
                                         <th class="left">Rounds</th>
                                         <th class="left">AnsweredPrevQues</th>
-                                        <th class="left">GalitRemarks</th>
+                                        <th class="left">GalitRemarks</th>-->
                                     </tr>
                                 </thead>
                                 <tbody></tbody>
@@ -233,11 +233,11 @@
                             } else return "לא"
                         }
                     },
-                    { data: "EnglishName" },
-                    { data: "Source" },
-                    { data: "Rounds" },
-                    { data: "AnsweredPrevQues" },
-                    { data: "GalitRemarks" } 
+                    { data: "EnglishName" }
+                    //{ data: "Source" },
+                    //{ data: "Rounds" },
+                    //{ data: "AnsweredPrevQues" },
+                    //{ data: "GalitRemarks" } 
                 ]
             })
         }
