Disabled "אין נסיעת חזור" status

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -1072,8 +1072,10 @@
             $('#messagesModal').modal('hide');
             $('#DriverReturnRidePatMsg').html("");
 
+        //הסטטוס 'אין נסיעת הלוך' עושה בעיות כיוון שלא ניתן להשתבץ אליו.
+            //newStatus = "אין נסיעת הלוך"
+            newStatus = "ממתינה לשיבוץ"
 
-            newStatus = "אין נסיעת הלוך"
             ReturnRidePatNum = returnRidePat.RidePatNum
             $.ajax({
                 dataType: "json",
