--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -132,6 +132,7 @@
             $("#rp_amuta_vls_week").click(on_report_click);
             $("#rp_amuta_vls_per_pat").click(on_report_click);
             $("#rp_amuta_vls_km").click(on_report_click);
+            $("#rp_amuta_vls_list").click(on_report_click);
     
            
 
@@ -347,6 +348,7 @@
                                         <li><a class="report_link_cls" id="rp_amuta_vls_week">מתנדבים שבועי</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_per_pat">מתנדבים - פר חולה</a></li>
                                         <li><a class="report_link_cls" id="rp_amuta_vls_km">מתנדבים – שנתי</a></li>
+                                        <li><a class="report_link_cls" id="rp_amuta_vls_list">רשימת מתנדבים</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -385,6 +387,22 @@
                                         <tr>
                                             <th title="Region" class="dateCustomWidth">אזור</th>
                                             <th title="Volunteer" class="timeCustomWidth">מתנדב</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
+                            <div id="div_table_amuta_vls_list" style="display:none" class="card-box table-responsive">
+                                <table id="table_amuta_vls_list" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="FirstNameH" class="dateCustomWidth">שם פרטי</th>
+                                            <th title="LastNameH" class="timeCustomWidth">שם משפחה</th>
+                                            <th title="VolunteerIdentity" class="timeCustomWidth">ת.ז</th>
+                                            <th title="Email" class="timeCustomWidth">דואר</th>
+                                            <th title="Address" class="timeCustomWidth">כתובת</th>
+                                            <th title="CityCityName" class="timeCustomWidth">ישוב מגורים</th>
+                                            <th title="JoinDate" class="timeCustomWidth">תאריך הצטרפות</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
