--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -42,7 +42,7 @@
     <script src="dataTables.js"></script>
     <script src="moment.js"></script>
     <script src="datetime-moment.js"></script>
-    <script src="../../Scripts/moment.js"></script>
+    <script src="./moment.js"></script>
 
 
     <!-- Select2 css+js -->
@@ -415,7 +415,7 @@
 
                     GENERAL.RIDEPAT.setRidePatList(JSON.stringify(arr_rides));
                     for (i in arr_rides) {
-
+                        if (arr_rides[i].Status === 'נמחקה') continue; // ← Yogev add this in order to map out rides that marked as deleted
                         if (arr_rides[i].Coordinator.DisplayName != currentCoor) continue; //let the function run only for logged-in coordinator
 
                         //Change date format
