Radio Group for voluteers list - WIP.

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -452,7 +452,7 @@
 
                                     <div class="col-sm-12">
                                         <div class="form-group">
-                                            <label class="col-sm-2"  style="padding: 0.5em 0px;">מתנדב</label>
+                                            <label class="col-sm-2" style="padding: 0.5em 0px;">מתנדב</label>
                                             <div class="col-sm-10" id="selectDriver">
                                                 <input placeholder="הזן שם" type="text" template_id="select_driver" class="form-control ui-autocomplete-input" autocomplete="off" aria-required="true" aria-invalid="false">
                                             </div>
@@ -470,7 +470,7 @@
 
                                     <div class="col-sm-12">
                                         <div class="form-group">
-                                            <label class="col-sm-2"  style="padding: 0.5em 0px;">חודש</label>
+                                            <label class="col-sm-2" style="padding: 0.5em 0px;">חודש</label>
                                             <div class="col-sm-10">
                                                 <input type="text" template_id="select_month" class="form-control" aria-required="true" aria-invalid="false">
                                             </div>
@@ -488,14 +488,44 @@
 
                                     <div class="col-sm-12">
                                         <div class="form-group">
-                                            <label class="col-sm-2"  style="padding: 0.5em 0px;">שבוע</label>
+                                            <label class="col-sm-2" style="padding: 0.5em 0px;">שבוע</label>
                                             <div class="col-sm-10">
-                                                <input type="date" template_id="select_week"  placeholder="..." class="form-control">
+                                                <input type="date" template_id="select_week" placeholder="..." class="form-control">
                                             </div>
                                         </div>
 
                                     </div>
 
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row report_template" name="template_DATE_LATER_THAN">
+                            <div class="card-box">
+                                <div class="row" id="flashDiv">
+                                    <div class="col-sm-1"><input type="radio" template_name="radio" checked /></div>
+                                    <div class="col-sm-11">
+                                        <div class="form-group">
+                                            <label class="col-sm-4" style="padding: 0.5em 0px;">הצטרפות אחרי </label>
+                                            <div class="col-sm-8">
+                                                <input type="date" template_id="select_date_later" placeholder="..." class="form-control">
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row report_template" name="template_ALL_VOLUNTEERS">
+                            <div class="card-box">
+                                <div class="row" id="flashDiv">
+                                    <div class="col-sm-1"><input type="radio" template_name="radio" /></div>
+                                    <div class="col-sm-10">
+                                            <label style="padding: 0.5em 0px;"> כל המתנדבים </label>
+                                        </div>
+
+                                    </div>
 
                                 </div>
                             </div>
@@ -506,7 +536,7 @@
 
                                     <div class="col-sm-12">
                                         <div class="form-group">
-                                            <label class="col-sm-2"  style="padding: 0.5em 0px;">חולה</label>
+                                            <label class="col-sm-2" style="padding: 0.5em 0px;">חולה</label>
                                             <div class="col-sm-10">
                                                 <input type="text" template_id="select_patient" class="form-control" aria-required="true" aria-invalid="false">
                                             </div>
@@ -524,7 +554,7 @@
 
                                     <div class="col-sm-12">
                                         <div class="form-group">
-                                            <label class="col-sm-2"  style="padding: 0.5em 0px;">שנה</label>
+                                            <label class="col-sm-2" style="padding: 0.5em 0px;">שנה</label>
                                             <div class="col-sm-10">
                                                 <select template_id="select_year" class="form-control">
                                                     <option value="2020" selected>2020</option>
